--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
     "mongoose": "^5.8.1",
     "mongoose-unique-validator": "^2.0.3",
