--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "debug": "^4.1.1",
     "express": "^4.17.1",
     "mongoose": "^5.8.1",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.4.2"
+    "nodemailer": "^6.4.2",
+    "debug": "^4.1.1"
   }
 }
