--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "core-js": "^2.5.4",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
