--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,11 @@
     "express": "^4.17.1",
     "mongoose": "^5.8.1",
     "mongoose-unique-validator": "^2.0.3",
+    "md5-typescript": "^1.0.5",
     "multer": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.2",
+    "soap": "^0.30.0",
     "debug": "^4.1.1"
   }
 }
