--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host 0.0.0.0",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "json": "json-server data.js -p 3500 -m authMiddleware.js",
-    "start:server": "nodemon ./backend/server.js "
+    "server": "nodemon ./backend/server.js "
   },
   "private": true,
   "dependencies": {
@@ -32,15 +32,18 @@
     "core-js": "^2.5.4",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "form-data": "^3.0.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
+    "md5-typescript": "^1.0.5",
     "mongoose": "^5.8.1",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "ngx-mask": "^8.1.7",
     "nodemailer": "^6.4.2",
     "rxjs": "~6.2.0",
+    "soap": "^0.30.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
