--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "ngx-mask": "^8.1.7",
+    "ngx-responsive": "^7.0.1",
     "nodemailer": "^6.4.2",
     "rxjs": "~6.2.0",
     "soap": "^0.30.0",
