--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ngx-gallery/core": "^4.0.3",
+    "angular-google-tag-manager": "^1.1.1",
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -40,6 +41,7 @@
     "mongoose": "^5.8.1",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
+    "ngx-infinite-scroll": "^6.0.0",
     "ngx-mask": "^8.1.7",
     "ngx-responsive": "^7.0.1",
     "nodemailer": "^6.4.2",
