--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/material": "^6.4.7",
+    "@angular/material-moment-adapter": "^11.0.4",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
@@ -38,9 +39,11 @@
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "md5-typescript": "^1.0.5",
+    "moment": "^2.29.1",
     "mongoose": "^5.8.1",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
+    "ng-yandex-metrika": "^4.0.0",
     "ngx-infinite-scroll": "^6.0.0",
     "ngx-mask": "^8.1.7",
     "ngx-responsive": "^7.0.1",
